syntax="proto3";

package v1;

option go_package = "github.com/ranxx/proxy/proto/clients/v1";

option (options.openapiv2_swagger) = {
  info: {
    title: "Clients"
    version: "1.0.0"
    contact: {
    name: "ranxx"
    email: "ran.star@foxmail.com"
    }
  }
  base_path: "/api/v1/clients"
  consumes: "application/json"
  produces: "application/json"
};

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

service Clients {
  // 客户端列表
  rpc ListClient (ListClientReq) returns (ListClientRsp) {
    option (google.api.http) = {
      get: "/list"
    };
    option (options.openapiv2_operation) = {
      tags: "客户端列表"
    };
  }

  // 停止
  rpc StopClient (StopClientReq) returns (StopClientRsp) {
    option (google.api.http) = {
      put: "/stop/{id}"
    };
    option (options.openapiv2_operation) = {
      tags: "停止"
    };
  }

  // 删除
  rpc DeleteClient (DeleteClientReq) returns (DeleteClientRsp) {
    option (google.api.http) = {
      delete: "/client/{id}"
    };
    option (options.openapiv2_operation) = {
      tags: "删除"
    };
  }
}

enum ClientStatus {
  _cilents = 0;
  // 停止
  Stop = 1;
  // 运行中
  Run = 2;
}

message Client {
  int64  id = 1;
  string machine = 2;
  ClientStatus status = 3;
}

message ListClientReq {
  int64 offset = 1;
  int64 limit = 2;
}

message ListClientRsp {
  int64 total = 1;
  repeated Client items = 2;
}

message StopClientReq {
  int64 id = 1;
}

message StopClientRsp {}

message DeleteClientReq {
  int64 id = 1;
}

message DeleteClientRsp {}